--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -35,6 +35,7 @@
             justify-content: center;
             display: flex;
             text-align: center;
+            height: 120px;
           }
           .form-content {
             justify-content: center;
